# YouTubeUploaderBot

./: .gitignore  bot.py  database.py  database.sql  pyproject.toml  typedef.py  utils.py  worker.py  youtube.py
model/: channels.py  playlistItems.py  subscriptions.py  videos.py
