[project]
name = "youtubeuploaderbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pyrogram>=2.0.106",
    "pytz>=2025.2",
    "tgcrypto>=1.2.5 ; sys_platform == 'linux'",
    "yt-dlp>=2026.3.3",
    "yt-dlp-ejs>=0.5.0",
    "yt-dlp-get-pot>=0.3.0",
]
